--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-03-28 11:28:21 -0400 
+%% Created for Nils Peters at 2009-04-01 09:04:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{JotPhD,
+	Address = {Paris 92 E 019},
+	Author = {Jot, Jean-Marc},
+	Date-Added = {2009-04-01 09:04:38 -0400},
+	Date-Modified = {2009-04-01 09:04:38 -0400},
+	School = {France Telecom},
+	Title = {Etude et R{\'e}alization d'un Spatialisateur de Sons par Mod{\`e}les Physiques et Perceptifs},
+	Year = {1992}}
+
+@article{CMJ08-VIMIC,
+	Author = {Braasch, Jonas and Peters, Nils and Valente, Daniel L.},
+	Date-Added = {2009-04-01 09:02:11 -0400},
+	Date-Modified = {2009-04-01 09:02:11 -0400},
+	Journal = {Computer Music Journal},
+	Keywords = {spatialisation},
+	Number = {3},
+	Pages = {55 -- 71},
+	Title = {A Loudspeaker-Based Projection Technique for Spatial Music Applications Using Virtual Microphone Control},
+	Volume = {32},
+	Year = {2008},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/pdf/10.1162/comj.2008.32.3.55}}
 
 @article{dbapICMC09,
 	Author = {Trond Lossius and Pascal Baltazar and Th\´eo de la Hogue },
