--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-04-15 13:09:17 -0400 
+%% Created for Pascal Baltazar at 2009-04-15 21:17:29 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,12 +18,12 @@
 	Title = {Holo-Edit online : construction d'une application Java sur internet},
 	Year = {2005}}
 
-@conference{LaurentDAFX98,
+@conference{PottierDAFX98,
 	Address = {Barcelona, Spain},
 	Author = {Pottier Laurent},
 	Booktitle = {International Conference on Digital Audio Effects, DAFX98},
 	Date-Added = {2009-04-15 12:56:40 -0400},
-	Date-Modified = {2009-04-15 13:01:17 -0400},
+	Date-Modified = {2009-04-15 21:11:06 +0200},
 	Title = {Dynamical spatialisation of sound. HOLOPHON: a graphical and algorithmical editor for Sigma 1},
 	Year = {1998},
 	Bdsk-Url-1 = {http://www.iua.upf.es/dafx98/papers/POT38.PS}}
